# Aegis

./: .gitignore  ACCEPTANCE_CRITERIA.md  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_RULES.md  AUDIT_REMEDIATION_MATRIX.md  CAN_CHANGE_LATER.md  CHANGE_POLICY.md  FULL_SCOPE.md  GLOSSARY.md  IMPLEMENTATION_ORDER.md  MUST_NOT_VIOLATE.md  Makefile  NO_CONTEXT_SURVIVAL.md  OPEN_DECISIONS.md  OPERATIONS.md  PATCHLOG_V2.md  PATCHLOG_V3.md  PRODUCT.md  QUALITY_SCORE.md  README.md  RELIABILITY.md  REPO_MAP.md  REVIEW_RUBRIC.md  RISK_REGISTER.md  ROADMAP.md  SECURITY.md  TECH_DEBT.md  TEST_STRATEGY.md  TRACEABILITY_MATRIX.md  buf.gen.yaml  buf.yaml  mix.exs  requirements-dev.txt
apps/: README.md
benchmarks/: README.md
config/: config.exs  dev.exs  test.exs
docs/: README.md
infra/: README.md
meta/: abac-attributes.yaml  acceptance-criteria.yaml  adoption-evidence-manifest.yaml  adoption-profiles.yaml  adr-index.yaml  architecture-rules.yaml  audit-export-policy.yaml  benchmark-corpus.yaml  compatibility-matrix.yaml  current-phase.yaml  customer-environment-readiness.yaml  customer-feedback-loop.yaml  customer-golden-paths.yaml  customer-operations-package.yaml  dangerous-action-classes.yaml  dedicated-deployment-profile.yaml  dedicated-tenant-evidence.yaml  deployment-flavors.yaml  deprecation-governance.yaml  determinism-classes.yaml  ecosystem-evidence-manifest.yaml  enterprise-acceptance-checklist.yaml  enterprise-control-matrix.yaml  evaluation-deployment-profile.yaml  extension-certification-levels.yaml  failure-runbooks.yaml  (+72 more)
py/: README.md  pyproject.toml
(+907 files in other folders)
